--- a/css/styles.css
+++ b/css/styles.css
@@ -265,14 +265,16 @@ body {
 /* #region Artw Card */
 .artw-media {
   display: block;
-  overflow: hidden;
-  background: var(--color-surface-main);
-  box-shadow: 0 6px 20px 2px rgba(0,0,0,.2);
+  background: transparent;
 }
 .artw-media img {
   display: block;
-  width: 100%;
+  max-height: 250px;
+  max-width: 100%;
+  width: auto;
   height: auto;
+  margin: 0 auto;
+  box-shadow: 0 6px 20px 2px rgba(0, 0, 0, 0.2);
 }
 
 .artw-info {
@@ -516,6 +518,10 @@ dialog::backdrop {
     display: block;
   }
   /* #endregion Album */
+
+  .artw-media img {
+    max-height: 380px;
+  }
 
   /*#region Footer */
   .footer {
