--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ body {
 /* #endregion Presentation */
 
 /* #region Album */
-.album {
+.album-preview {
   padding-top: 2rem;
   margin-top: 2rem;
   border-top: 1px solid var(--color-btn-hover);
